# MLOps-Lab3

./: .coverage  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  Report.typ  app.py  main.py  model.onnx  pyproject.toml
.github/workflows/: CICD.yml
api/: api.py
cli/: cli.py
logic/: onnx_classifier.py  select_best_model.py  train.py  utilities.py
results/: best_model_info.json
templates/: index.html  style.css
tests/: test_api.py  test_artifacts.py  test_cli.py  test_logic.py
